--- a/backend/docker/docker_files/Dockerfile_app
+++ b/backend/docker/docker_files/Dockerfile_app
@@ -1,11 +1,11 @@
-FROM python:3.10
+FROM python:3.12
 
 ENV PYTHONUNBUFFERED 1
 ENV PYTHONDONTWRITEBYTECODE 1
 
 RUN set -e; \
     apt-get update ;\
-    apt-get -y install netcat ;\
+    apt-get -y install netcat-traditional ;\
     apt-get -y install gettext ;\
     apt-get -y  install httpie; \
     pip install --upgrade pip \
